--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -f -r dist",
-    "dev": "webpack --mode development",
-    "build": "webpack --env NODE_ENV=production --mode production",
-    "start": "webpack serve --config ./webpack.config.js --mode development"
+    "dev": "webpack --env NODE_ENV=development --config webpack.dev.js",
+    "build": "webpack --env NODE_ENV=production --config webpack.prod.js",
+    "start": "webpack serve --config ./webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +18,11 @@
     "@babel/preset-env": "^7.12.1",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
@@ -28,6 +31,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   }
 }
